sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: missing arguments for method print in object Predef;
follow this method with `_' if you want to treat it as a partially applied function
      print k;
      ^